arrayify executify