@@ -82,7 +82,7 @@ public final class SafeInstanceLauncher {
         if (multiMCExists(exeName)) {
             return true;
         }
-        Runtime.getRuntime().exec(multiMCLocation);
+        Runtime.getRuntime().exec(new String[]{multiMCLocation});
         int tries = 0;
         while ((!multiMCExists(exeName)) && (!cancelRequester.isCancelRequested())) {
             if (++tries > 50) {
